--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,23 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700&display=swap");
-
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: "Noto Sans JP", -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.customAds {
-  display: block;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
